ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
spec:
  tls:
    - hosts:
        - argocd.lumos.run
      secretName: argocd-cloudflare-cert
  rules:
    - host: argocd.lumos.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
